# mcp-ruleforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  __init__.py  mcp_tools.py  package.json  pyproject.toml  requirements.txt  server.py  test_mcp.py  wrapper.js
.cursor/rules/: rules.mdc
core/: __init__.py  project_analyzer.py  rule_generator.py  utils.py
templates/: angular.mdc  gitlab_ci.mdc  java_legacy_spring.mdc  python.mdc  spring_boot.mdc  vue.mdc
